gccida/c3/apply_delayed_renames
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_delayed_renames/src/ssa.c:1266:21: error: use of undeclared identifier 'machine_mode'
v7 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)old_reg + 2)); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/apply_delayed_renames/src/obj/ssa.o] Error 1
